fixed login page overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -273,3 +273,7 @@ th {
   border-radius: 8px;
   color: #FAFAFA;
 }
+
+.login{
+  overflow: hidden;
+}
